monitoring/prometheus-community/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.int.kyledev.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-stack-grafana
                port:
                  number: 80
  tls:
    - hosts:
        - grafana.int.kyledev.co
      secretName: kyledev-grafana-tls-secret
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.int.kyledev.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-stack-kube-prom-prometheus
                port:
                  number: 9090
  tls:
    - hosts:
        - prometheus.int.kyledev.co
      secretName: kyledev-grafana-tls-secret
